--- a/news_embedding.ipynb
+++ b/news_embedding.ipynb
@@ -71,9 +71,9 @@
    "outputs": [],
    "source": [
     "# Set up OpenAI API Key\n",
-    "client = OpenAI(api_key=\"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\")\n",
+    "client = OpenAI(api_key=\"\")\n",
     "# Initialize Pinecone\n",
-    "pinecone = Pinecone(api_key=\"pcsk_5bwfSU_HE5WPrgGpz8D9WcFthHCpj4kggifvwtvFHhXd1jXFCBsFnqoqXYybTzn3ctxPSm\")  # Replace with your Pinecone API key"
+    "pinecone = Pinecone(api_key=\"\")  # Replace with your Pinecone API key"
    ]
   },
   {
